tests/script/negative/duplicates/constructors.s
type T1 = C;
type T2 = C;
type T3 = D | E | D;
